@@ -640,3 +640,102 @@ EXECUTE stmt('{varlena,nonsense}');
 (1 row)
 
 DEALLOCATE stmt;
+/*
+ * Test push-down of the LIMIT clause.
+ */
+-- the limit clause is pushed down with and without ORDER BY
+EXPLAIN (COSTS off) SELECT d FROM typetest1 LIMIT 2;
+                                                      QUERY PLAN                                                      
+----------------------------------------------------------------------------------------------------------------------
+ Limit
+   ->  Foreign Scan on typetest1
+         Oracle query: SELECT /*f04d370c8510559c215152b699b07ac5*/ r1."D" FROM "TYPETEST1" r1 FETCH FIRST 2 ROWS ONLY
+(3 rows)
+
+SELECT d FROM typetest1 LIMIT 2;
+       d       
+---------------
+ 10-21-1968
+ 03-15-0044 BC
+(2 rows)
+
+EXPLAIN (COSTS off) SELECT d FROM typetest1 ORDER BY d LIMIT 2;
+                                                                     QUERY PLAN                                                                      
+-----------------------------------------------------------------------------------------------------------------------------------------------------
+ Limit
+   ->  Foreign Scan on typetest1
+         Oracle query: SELECT /*e2f036b94f72638325ef6dc70ad78e76*/ r1."D" FROM "TYPETEST1" r1 ORDER BY r1."D" ASC NULLS LAST FETCH FIRST 2 ROWS ONLY
+(3 rows)
+
+SELECT d FROM typetest1 ORDER BY d LIMIT 2;
+       d       
+---------------
+ 03-15-0044 BC
+ 10-21-1968
+(2 rows)
+
+-- with an OFFSET clause, the offset value is added to the limit
+EXPLAIN (COSTS off) SELECT * FROM qtest LIMIT 1 OFFSET 2;
+                                                                                          QUERY PLAN                                                                                          
+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+ Limit
+   ->  Foreign Scan on qtest
+         Oracle query: SELECT /*e571dec394b1d567b88b73fb3b4e6786*/ r1."ID", r1."SUBSTR(VC,1,3)", r1."NUM" FROM (SELECT id, SUBSTR(vc, 1, 3), num FROM typetest1) r1 FETCH FIRST 1+2 ROWS ONLY
+(3 rows)
+
+SELECT * FROM qtest LIMIT 1 OFFSET 2;
+ id | vc  |   num   
+----+-----+---------
+  4 | sho | 0.00000
+(1 row)
+
+-- no LIMIT push-down if there is a GROUP BY clause
+EXPLAIN (COSTS off) SELECT d, count(*) FROM typetest1 GROUP BY d LIMIT 2;
+                                                            QUERY PLAN                                                             
+-----------------------------------------------------------------------------------------------------------------------------------
+ Limit
+   ->  GroupAggregate
+         Group Key: d
+         ->  Foreign Scan on typetest1
+               Oracle query: SELECT /*145d52f5de38a843e3af04dc11eeb80c*/ r1."D" FROM "TYPETEST1" r1 ORDER BY r1."D" ASC NULLS LAST
+(5 rows)
+
+SELECT d, count(*) FROM typetest1 GROUP BY d LIMIT 2;
+       d       | count 
+---------------+-------
+ 03-15-0044 BC |     1
+ 10-21-1968    |     1
+(2 rows)
+
+-- no LIMIT push-down if there is an aggregate function
+EXPLAIN (COSTS off) SELECT 12 - count(*) FROM typetest1 LIMIT 1;
+                                           QUERY PLAN                                            
+-------------------------------------------------------------------------------------------------
+ Limit
+   ->  Aggregate
+         ->  Foreign Scan on typetest1
+               Oracle query: SELECT /*50857ae5af0c5a170837c8c56f91e583*/ '1' FROM "TYPETEST1" r1
+(4 rows)
+
+SELECT 12 - count(*) FROM typetest1 LIMIT 1;
+ ?column? 
+----------
+        9
+(1 row)
+
+-- no LIMIT push-down if there is a local WHERE condition
+EXPLAIN (COSTS OFF) SELECT id FROM typetest1 WHERE vc < 'u' LIMIT 1;
+                                               QUERY PLAN                                               
+--------------------------------------------------------------------------------------------------------
+ Limit
+   ->  Foreign Scan on typetest1
+         Filter: ((vc)::text < 'u'::text)
+         Oracle query: SELECT /*072b982b9aa0c38d3ad556626000d2d7*/ r1."ID", r1."VC" FROM "TYPETEST1" r1
+(4 rows)
+
+SELECT id FROM typetest1 WHERE vc < 'u' LIMIT 1;
+ id 
+----
+  3
+(1 row)
+
