@@ -448,3 +448,26 @@ EXECUTE stmt('{varlena,nonsense}');
 EXECUTE stmt('{varlena,nonsense}');
 EXECUTE stmt('{varlena,nonsense}');
 DEALLOCATE stmt;
+
+
+/*
+ * Test push-down of the LIMIT clause.
+ */
+
+-- the limit clause is pushed down with and without ORDER BY
+EXPLAIN (COSTS off) SELECT d FROM typetest1 LIMIT 2;
+SELECT d FROM typetest1 LIMIT 2;
+EXPLAIN (COSTS off) SELECT d FROM typetest1 ORDER BY d LIMIT 2;
+SELECT d FROM typetest1 ORDER BY d LIMIT 2;
+-- with an OFFSET clause, the offset value is added to the limit
+EXPLAIN (COSTS off) SELECT * FROM qtest LIMIT 1 OFFSET 2;
+SELECT * FROM qtest LIMIT 1 OFFSET 2;
+-- no LIMIT push-down if there is a GROUP BY clause
+EXPLAIN (COSTS off) SELECT d, count(*) FROM typetest1 GROUP BY d LIMIT 2;
+SELECT d, count(*) FROM typetest1 GROUP BY d LIMIT 2;
+-- no LIMIT push-down if there is an aggregate function
+EXPLAIN (COSTS off) SELECT 12 - count(*) FROM typetest1 LIMIT 1;
+SELECT 12 - count(*) FROM typetest1 LIMIT 1;
+-- no LIMIT push-down if there is a local WHERE condition
+EXPLAIN (COSTS OFF) SELECT id FROM typetest1 WHERE vc < 'u' LIMIT 1;
+SELECT id FROM typetest1 WHERE vc < 'u' LIMIT 1;
